--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* font----------- */
 @font-face {
     font-family: pageFont;
     src: url(font/Hunny\ Bummy.ttf);
@@ -8,7 +9,7 @@
     font-family: font2;
     src: url(font2/Gothix.ttf);
 }
-
+/* style to bodyd */
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -24,7 +25,7 @@ body {
     gap: 25px;
 
 }
-
+/*  style to all containers */
 .container {
     background-color: rgba(240, 248, 255, 0.95);
     width: 400px;
